# TRILL

./: .coverage  .coveragerc  .environment.yml  .gitignore  .readthedocs.yaml  20220423_PDB_Kinesins.csv  20220423_PDB_Kinesins.fasta  20220423_PDB_Kinesins_Trimmed.fasta  Dockerfile  LICENSE  MANIFEST.in  README.md  SAFETENSORS_INTEGRATION.md  cmd_embed.rst  cmd_finetune.rst  cmd_fold.rst  conf.py  env.yml  environment.yml  index.rst  pixi.toml  pyproject.toml  setup.py
.github/workflows/: CI.yml  GPU_CI.yml  Poetry  Poetry_Publish.yml  python-app.yml
data/: MG1655.fasta  VP1s.csv  VP2s.csv  cluster3_put_VP2.csv  query.fasta
docs/: README.rst  classify.rst  cmd.rst  cmd_diff_gen.rst  cmd_dock.rst  cmd_embed.rst  cmd_finetune.rst  cmd_fold.rst  cmd_generate.rst  cmd_inv_fold_gen.rst  cmd_lang_gen.rst  cmd_main.rst  cmd_score.rst  cmd_simulate.rst  cmd_utils.rst  cmd_visualize.rst  cmd_workflow.rst  colab_tuned.csv  conf.py  diff_gen.rst  doc_requirements.txt  dock.rst  home.md  index.rst  inv_fold_gen.rst  viz_example.rst  vp1_UMAP_vp1_esm2_t12_35M_UR50D.html
scripts/: esm_finetune_0pt25_vp1.py  esm_finetune_0pt5_vp1.py  esm_finetune_0pt75_vp1.py  esm_mlm_vp1.ipynb  esm_mlm_vp1.py  esm_tuned_gen_embeddings.py  lightning_model.py  main.py  mlm_martin.py  newmain.py  tutorial_slurm  tutorial_slurm.sh  ych_util.py
scripts/.ipynb_checkpoints/: esm_mlm_vp1-checkpoint.ipynb
scripts/esm/: modules.py  pretrained.py
scripts/esm/.ipynb_checkpoints/: data-checkpoint.py  pretrained-checkpoint.py
scripts/utils/: WranglingData.py  __init__.py  embed.py  finetune.py  lightning_model.py  lightning_models.py  mlm.py  update_weights.py  visualize.py
scripts/utils/.ipynb_checkpoints/: embed-checkpoint.py  finetune-checkpoint.py  mlm-checkpoint.py
scripts/utils/tests/: test_esm.py
sphinx/: cmd.html  cmd_embed.html  cmd_finetune.html  cmd_fold.html  cmd_generate.html  cmd_main.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
tests/: temp_script.py  test_esm.py  test_protgpt2.py  test_trill.py
trill/: trill.py  trill_main.py  tutorial_slurm.sh
trill/commands/: classify.py  commands_common.py  diff_gen.py  diffuse_gen.py  dock.py  embed.py  finetune.py  fold.py  inv_fold.py  inv_fold_gen.py  lang_gen.py  regress.py  score.py  simulate.py  utils.py  visualize.py  workflow.py
trill/data/: boltz_example_input.fasta  chai_example_input.fasta  cpp_ex.fasta  if1_target.csv  query.fasta  target_4ih9.fa  target_base_ProtGPT2.fasta  target_esm2_t12_35M_UR50D.csv  target_esm2_t30_150M_UR50D_Gibbs.fasta  tuner.fasta
trill/utils/: MLP.py  WranglingData.py  catapro.py  catpred.py  classify_utils.py  cuda_utils.py  dock_utils.py  ensure_foldseek.py  ephod_utils.py  esm_utils.py  fasta_files.py  fetch_dbs.py  fetch_embs.py  foldseek_utils.py  foldtuning.py  genie2.py  lightning_models.py  logging.py  mask.py  materials_utils.py  mionic_utils.py  mmelon_utils.py  molt5_utils.py  openmmforcefields_template_generators.py  poolparti.py  progen_utils.py  protein_mpnn_utils.py  protgpt2_utils.py  psichic.py  regression_utils.py  rosettafold_aa.py  safe_load.py  saprot_utils.py  scasa_utils.py  simulation_utils.py  strategy_tuner.py  visualize.py
trill/utils/inverse_folding/: __init__.py  gvp_encoder.py  gvp_transformer.py  gvp_transformer_encoder.py  multichain_util.py  transformer_decoder.py  util.py
