[tool.poetry]
name = "trill-proteins"
version = "1.8.2"
description = "Sandbox for Computational Protein Design"
authors = ["Zachary Martinez <martinez.zacharya@gmail.com>"]
readme = "README.md"
repository = "https://github.com/martinez-zacharya/TRILL"
keywords = ["NLP", "Natural Language Processing", "Protein Design", "ESM2", "ESMFold", "ProteinMPNN", "ProtGPT2", "ZymCTRL", "RFDiffusion"]
packages = [{include = "trill"}]
license = "MIT"
documentation = "https://trill.readthedocs.io/en/latest/home.html"

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "69.5.1"
#torch = "1.13.1"
urllib3 = "1.26.18"
numpy = "^1.26.3"
numba = "^0.58.1"
loguru = "^0.7.2"
llvmlite = "^0.41.0"
pytest = "^8.2.0"
fair-esm = "^2.0.0"
pydantic = "1.10.11"
GitPython = "^3.1.29"
pandas = "^1.5.2"
biotite = "^0.39.0"
transformers = "^4.25.1"
accelerate = "^0.22.0"
datasets = "^2.7.1"
pyfiglet = "^0.8.post1"
deepspeed = "^0.14.0"
fairscale = "^0.4.13"
pytorch-lightning = "^1.9.0"
umap-learn = "^0.5.3"
bokeh = "^3.0.3"
rdkit = "^2022.9.5"
e3nn = "^0.5.1"
biopython = "1.81"
spyrmsd = "^0.5.2"
SentencePiece = "^0.1.97"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"
icecream = "^2.1.3"
chardet = "^5.1.0"
#cchardet = "^2.1.7"
xgboost = "^1.7.5"
skops = "^0.6.0"
biobb_vs = "^4.1.1"
scikit-optimize = "^0.9.0"
h5py = "^3.10.0"
lightgbm = "^4.4.0"
evaluate = "^0.4.2"
ml-collections = "^0.1.1"
dm-tree = "^0.1.8"


[tool.poetry.scripts]
trill = "trill.trill_main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
