[tool.poetry]
name = "trill-proteins"
version = "1.9.0"
description = "Sandbox for Computational Protein Design"
authors = ["Zachary Martinez <martinez.zacharya@gmail.com>"]
readme = "README.md"
repository = "https://github.com/martinez-zacharya/TRILL"
keywords = ["NLP", "Natural Language Processing", "Protein Design", "ESM2", "ESMFold", "ProteinMPNN", "ProtGPT2", "ZymCTRL", "RFDiffusion"]
packages = [{include = "trill"}]
license = "MIT"
documentation = "https://trill.readthedocs.io/en/latest/home.html"

[tool.poetry.dependencies]
python = "3.11"
setuptools = "78.1.1"
#torch = "1.13.1"
urllib3 = "1.26.18"
numpy = "^1.26.3"
numba = "^0.58.1"
meeko = "^0.5.1"
loguru = "^0.7.2"
llvmlite = "^0.41.0"
pytest = "^8.2.0"
fair-esm = "^2.0.0"
#pydantic = "2.0.0"
GitPython = "^3.1.29"
pandas = "^2.3.0"
biotite = "^0.39.0"
transformers = "^4.25.1"
accelerate = "^1.8.1"
datasets = "^2.7.1"
pyfiglet = "^0.8.post1"
deepspeed = "^0.17.1"
fairscale = "^0.4.13"
pytorch-lightning = "^2.5.1.post0"
umap-learn = "^0.5.3"
bokeh = "^3.0.3"
rdkit = "^2024.3.2"
e3nn = "^0.5.1"
biopython = "1.81"
spyrmsd = "^0.5.2"
SentencePiece = "^0.1.97"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"
icecream = "^2.1.3"
chardet = "^5.1.0"
#cchardet = "^2.1.7"
xgboost = "^1.7.5"
skops = "^0.9.0"
biobb_vs = "^4.1.1"
scikit-optimize = "^0.9.0"
h5py = "^3.10.0"
lightgbm = "^4.4.0"
evaluate = "^0.4.2"
ml-collections = "^0.1.1"
dm-tree = "^0.1.8"
click = "^8.1.7"
mashumaro = "^3.14"
modelcif = "^1.2"
beartype = "^0.18.0"
jaxtyping = "^0.2.25"
gemmi = "^0.6.3"
pandera = "^0.22.1"
antipickle = "^0.2.0"
scikit-learn = "1.4.1.post1"
optuna = "4.2.0"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
tensorboard = "^2.19.0"
#pytorch-fast-transformers = "0.4.0"
MDAnalysis = "^2.9.0"
lifelines = "0.30.0"
ipdb = "0.13.13"
fuse-med-ml = "0.3.0"
tensorboardx = "2.6.4"
typed-argument-parser = "1.10.1"
pydantic = "^2.11.5"
reprint = "^0.6.0"
plotly = "^6.1.2"
AmberUtils = "21.0"
selfies = "2.2.0"
ase = "3.24.0"
torch-nl = "0.3"

[tool.poetry.scripts]
trill = "trill.trill_main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
