[project]
name = "trill-proteins"
version = "1.10.0"
description = "Sandbox for Computational Protein Design"
requires-python = ">=3.10"

# This creates the `trill` command on PATH inside the env
[project.scripts]
trill = "trill.trill_main:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["trill*"]